--- a/style.css
+++ b/style.css
@@ -292,7 +292,7 @@ form button {
     background-color: var(--color3);
     border: none;
     margin: 10px 0;
-    color: var(--color1);
+    color: var(--color2);
     font-size: 0.7em;
     border-radius: 2px;
 }
@@ -442,9 +442,12 @@ main {
     background-color: var(--color3);
     color: var(--color1);
     border: none;
-    height: 3vh;
+    height: 4vh;
     margin: 10px 5px;
     font-size: 0.6em;
+    padding: 4px;
+    border-radius:2px;
+    
 }
 
 .recetteButton:hover {
@@ -967,6 +970,7 @@ SUGGESTIONS API - CSS pour les recettes similaires
     transition: transform 0.2s ease;
     border-radius: 50%;
     padding: 4px;
+    background-color: var(--color1);
 }
 
 .heart-icon-suggestion:hover {
@@ -989,6 +993,21 @@ SUGGESTIONS API - CSS pour les recettes similaires
     border-color: var(--color3);
     box-shadow: 0 8px 20px rgba(231, 127, 33, 0.2);
 }
+
+.myFavorite {
+    margin-bottom: 7vh;
+    padding: 5px;
+    border-bottom: 1px solid var(--color2);
+}
+
+.myFavorite h2, .myFavorite p{
+       padding: 5px;
+}
+
+.eachCard{
+    margin: 30px 0;
+}
+
 
 /* Responsive design pour les suggestions */
 @media (max-width: 768px) {
