--- a/css/benoit.css
+++ b/css/benoit.css
@@ -128,6 +128,8 @@
 
 .recette-header h1 {
     color: var(--color3);
+   font-size: clamp(0.8rem, 5vw, 4rem);
+
 }
 
 .recette-detail h2 {
@@ -140,9 +142,7 @@
 }
 
 .recette-image {
-    width: 100%;
-    max-width: 400px;
-    height: 250px;
+    width: 30vw;
     object-fit: cover;
     border-radius: 10px;
     margin: 20px 0;
@@ -205,4 +205,11 @@
         .mealPic{
             height: 40vh;
         }
+    }
+
+
+
+    .detailRecepie{
+        width: 70vw;
+        margin: auto;
     }
