--- a/style.css
+++ b/style.css
@@ -611,6 +611,46 @@ end main page
 ----------- */
 
 /* === STYLES POUR LES FAVORIS === */
+/* Styles dynamiques pour élargir mealPic, h3 et bouton selon le nombre de favoris */
+.favoris-1 .mealPic {
+    width: 100%;
+    height: 50vh;
+    max-width: 900px;
+    display: block;
+    margin: 0 auto 40px auto;
+}
+.favoris-1 h3 {
+    font-size: 2.7em;
+    text-align: center;
+    width: 100%;
+}
+.favoris-1 .recetteButton {
+    font-size: 1.5em;
+    padding: 22px 60px;
+    width: 90%;
+    margin: 40px auto 0 auto;
+    display: block;
+}
+
+.favoris-2 .mealPic {
+    width: 100%;
+    height: 40vh;
+    max-width: 700px;
+    display: block;
+    margin: 0 auto 30px auto;
+}
+.favoris-2 h3 {
+    font-size: 2.2em;
+    text-align: center;
+    width: 100%;
+}
+.favoris-2 .recetteButton {
+    font-size: 1.3em;
+    padding: 18px 40px;
+    width: 80%;
+    margin: 30px auto 0 auto;
+    display: block;
+}
 
 /* .favoris-grid {
     display: grid;
